--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -203,11 +203,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 bIsThemePanelVisible=True
 
 [MRU]
-MRUItem0=/Game/Maps/TutorialMap
-MRUItem1=/Game/Maps/Tunnel
-MRUItem2=/Game/Maps/EnemyBaseAI
-MRUItem3=/Game/Maps/MainmenuMap
-MRUItem4=/Game/Maps/NewMapDecorated
+MRUItem0=/Game/Maps/NewMapDecorated
+MRUItem1=/Game/Maps/TutorialMap
+MRUItem2=/Game/Maps/Tunnel
+MRUItem3=/Game/Maps/EnemyBaseAI
+MRUItem4=/Game/Maps/MainmenuMap
 MRUItem5=/Game/Maps/Player
 MRUItem6=/Game/Maps/Enemy1
 MRUItem7=/Game/Maps/NewMap
@@ -772,13 +772,14 @@ bNavigationToolVisible=False
 [EditorStartup]
 LastLevel=/Game/Maps/Player
 LastLevel========
-LastLevel=/Game/Maps/TutorialMap
+LastLevel=/Game/Maps/NewMapDecorated
 MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
@@ -808,8 +809,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/Blueprints/BF_FPS_Character.BF_FPS_Character
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=8.000
@@ -2330,7 +2329,7 @@ ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Player/Katana
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Enemy_Base
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Animation/Mixamo_Animations
-ContentBrowserTab1.SelectedPaths=/Game/UI/PlayerUi
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -2357,10 +2356,10 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab1.JumpMRU=/All/Game/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserTab1.JumpMRU=/All/Game/UI
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints
-ContentBrowserTab1.JumpMRU=/All/Game/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints/DamageSystem
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints/Animation
 ContentBrowserTab1.JumpMRU=/All/Game/Audio
@@ -5559,36 +5558,36 @@ Emitter.Actor=True
 Emitter.Materials=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/PlayerUi/WB_DeathScreen
-MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/Maps/TutorialMap
-MRUItem3=/Game/Blueprints/BF_FPS_Character
-MRUItem4=/Game/Maps/Tunnel
-MRUItem5=/Game/Blueprints/E_MovementState
-MRUItem6=/Game/Maps/EnemyBaseAI
-MRUItem7=/Game/Blueprints/Animation/Player/ABP_Character
-MRUItem8=/Game/Blueprints/Animation/Enemy/ABP_BaseEnemy_AI
-MRUItem9=/Game/Blueprints/Animation/Enemy/2DBlendSpace_Run
-MRUItem10=/Game/Blueprints/Enemies/EnemyBase/BT_Enemy_Base
-MRUItem11=/Game/Blueprints/Enemies/EnemyBase/BP_Enemy_Base
-MRUItem12=/Game/Maps/MainmenuMap
-MRUItem13=/Game/Blueprints/DamageSystem/BPI_Damagable
-MRUItem14=/Game/Blueprints/particles/BloodSpray1
-MRUItem15=/Game/Assets/Mannequins/M_SKEL_UE5_Mannequin
-MRUItem16=/Game/Blueprints/particles/BloodSpray2
-MRUItem17=/Game/Blueprints/particles/BloodFountaining
-MRUItem18=/Game/StarterContent/Particles/P_Sparks
-MRUItem19=/Game/Blueprints/particles/SparksFly
-MRUItem20=/Game/Blueprints/particles/Embers
-MRUItem21=/Game/Blueprints/Animation/Enemy/Sprint_Bwd
-MRUItem22=/Game/Blueprints/Animation/Enemy/Sprint_Fwd
-MRUItem23=/Game/Blueprints/Animation/Enemy/Sprint_Right
-MRUItem24=/Game/Blueprints/Animation/Enemy/Sprint_Left
-MRUItem25=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Uphill
-MRUItem26=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Downhill
-MRUItem27=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Circle_Rt
-MRUItem28=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Circle_Lt
-MRUItem29=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Bwd_Circle_Rt
+MRUItem0=/Game/Maps/NewMapDecorated
+MRUItem1=/Game/UI/PlayerUi/WB_DeathScreen
+MRUItem2=/Game/UI/MainMenu
+MRUItem3=/Game/Maps/TutorialMap
+MRUItem4=/Game/Blueprints/BF_FPS_Character
+MRUItem5=/Game/Maps/Tunnel
+MRUItem6=/Game/Blueprints/E_MovementState
+MRUItem7=/Game/Maps/EnemyBaseAI
+MRUItem8=/Game/Blueprints/Animation/Player/ABP_Character
+MRUItem9=/Game/Blueprints/Animation/Enemy/ABP_BaseEnemy_AI
+MRUItem10=/Game/Blueprints/Animation/Enemy/2DBlendSpace_Run
+MRUItem11=/Game/Blueprints/Enemies/EnemyBase/BT_Enemy_Base
+MRUItem12=/Game/Blueprints/Enemies/EnemyBase/BP_Enemy_Base
+MRUItem13=/Game/Maps/MainmenuMap
+MRUItem14=/Game/Blueprints/DamageSystem/BPI_Damagable
+MRUItem15=/Game/Blueprints/particles/BloodSpray1
+MRUItem16=/Game/Assets/Mannequins/M_SKEL_UE5_Mannequin
+MRUItem17=/Game/Blueprints/particles/BloodSpray2
+MRUItem18=/Game/Blueprints/particles/BloodFountaining
+MRUItem19=/Game/StarterContent/Particles/P_Sparks
+MRUItem20=/Game/Blueprints/particles/SparksFly
+MRUItem21=/Game/Blueprints/particles/Embers
+MRUItem22=/Game/Blueprints/Animation/Enemy/Sprint_Bwd
+MRUItem23=/Game/Blueprints/Animation/Enemy/Sprint_Fwd
+MRUItem24=/Game/Blueprints/Animation/Enemy/Sprint_Right
+MRUItem25=/Game/Blueprints/Animation/Enemy/Sprint_Left
+MRUItem26=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Uphill
+MRUItem27=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Downhill
+MRUItem28=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Circle_Rt
+MRUItem29=/Game/RetargetedAssets/NarbashManny/Sprint/Sprint_Fwd_Circle_Lt
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -5706,7 +5705,7 @@ PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" \"Object.Mass.ModuleSettings\" \"Object.Mass.ModuleSettings.ModuleSettings[0]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[0]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[1]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[10]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[11]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[12]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[13]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[14]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[15]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[2]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[3]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[4]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[5]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[6]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[7]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[8]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessorCDOs.ProcessorCDOs[9]\" "
